planning/sutra-spec/24-grammar.ebnf
(* ============================================================ *)
(* Sutra Surface Grammar — v0.0.0                                *)
(* ============================================================ *)
(*                                                                *)
(* This file is the canonical grammar for Sutra source files      *)
(* (.su). It describes what the reference compiler in             *)
(* sdk/sutra-compiler/ currently accepts.                         *)
(*                                                                *)
(* v0.0.0 is the pre-formalization development version. The       *)
(* first solution-aware release will be v0.0.1; breaking changes  *)
(* between v0.0.0 and v0.0.1 are explicitly allowed. See the      *)
(* accompanying 24-grammar.md and 25-solution-structure.md for    *)
(* context.                                                        *)
(*                                                                *)
(* Notation: ISO 14977 EBNF.                                      *)
(*                                                                *)
(*     =        definition                                        *)
(*     ,        concatenation (often omitted when unambiguous)    *)
(*     |        alternation                                       *)
(*     [ X ]    optional                                          *)
(*     { X }    zero or more                                      *)
(*     ( X )    grouping                                          *)
(*     "..."    terminal (literal character / keyword / operator) *)
(*     UPPER    lexical class, defined in the lexical grammar     *)
(*     (* *)    comment                                           *)
(*                                                                *)
(* When this file and the reference parser disagree, one of them  *)
(* is wrong and the disagreement must be resolved explicitly      *)
(* (per CLAUDE.md).                                                *)
(* ============================================================ *)


(* ============================================================ *)
(* Syntactic grammar                                             *)
(* ============================================================ *)

module          = { top_level_item } ;

top_level_item  = function_decl
                | method_decl
                | var_decl
                | typed_var_decl
                | statement ;


(* ---- Declarations -------------------------------------------- *)

modifiers       = { "public" | "private" | "static" } ;

function_decl   = [ modifiers ] , "function" , [ modifiers ] ,
                  ( operator_suffix
                  | type , IDENT , [ type_params ] ,
                    "(" , [ params ] , ")" , block ) ;

method_decl     = [ modifiers ] , "method" ,
                  ( operator_suffix
                  | type , IDENT , [ type_params ] ,
                    "(" , [ params ] , ")" , block ) ;

operator_suffix = "operator" , OVERLOADABLE_OP ,
                  "(" , [ params ] , ")" , block ;

type_params     = "<" , IDENT , { "," , IDENT } , ">" ;
params          = param , { "," , param } ;
param           = type , IDENT ;

type            = IDENT , [ "<" , type_args , ">" ] ;
type_args       = type , { "," , type } ;

var_decl        = ( "var" | "const" ) , [ type ] , IDENT ,
                  [ "=" , expr ] , ";" ;

typed_var_decl  = type , IDENT , [ "=" , expr ] , ";" ;


(* ---- Statements ---------------------------------------------- *)

statement       = if_stmt
                | while_stmt
                | for_stmt
                | foreach_stmt
                | do_while_stmt
                | loop_stmt
                | try_stmt
                | return_stmt
                | var_decl
                | typed_var_decl
                | block
                | expr_stmt
                | function_decl
                | method_decl ;

block           = "{" , { statement } , "}" ;

if_stmt         = "if" , "(" , expr , ")" , block ,
                  [ "else" , ( if_stmt | block ) ] ;

while_stmt      = "while" , "(" , expr , ")" , block ;

for_stmt        = "for" , "(" , [ for_init ] , ";" ,
                             [ expr ] , ";" ,
                             [ expr ] , ")" , block ;
for_init        = var_decl | typed_var_decl | expr_stmt ;

foreach_stmt    = "foreach" , "(" , ( "var" | type ) , IDENT ,
                  "in" , expr , ")" , block ;

do_while_stmt   = "do" , block , "while" , "(" , expr , ")" , ";" ;

loop_stmt       = "loop" , "(" , loop_header , ")" , block ;
loop_header     = INT_LIT , [ "as" , IDENT ]          (* bounded / unrolled *)
                | expr ;                              (* eigenrotation *)

try_stmt        = "try" , block , "catch" , block ;

return_stmt     = "return" , [ expr ] , ";" ;

expr_stmt       = expr , ";" ;


(* ---- Expressions (precedence cascade, lowest to highest) ----- *)
(* Each level below binds tighter than the one above it. All      *)
(* levels are left-associative except `assignment` which is       *)
(* right-associative.                                              *)

expr            = assignment ;

assignment      = logical_or , [ assign_op , assignment ] ;
assign_op       = "=" | "+=" | "-=" | "*=" | "/=" ;

logical_or      = logical_and , { "||" , logical_and } ;
logical_and     = equality    , { "&&" , equality } ;
equality        = comparison  , { ( "==" | "!=" ) , comparison } ;
comparison      = additive    , { ( "<" | ">" | "<=" | ">=" ) , additive } ;
additive        = multiplicative , { ( "+" | "-" ) , multiplicative } ;
multiplicative  = unary , { ( "*" | "/" | "%" ) , unary } ;
unary           = ( "!" | "-" | "+" ) , unary
                | postfix ;

postfix         = primary , { postfix_op } ;
postfix_op      = "." , IDENT                             (* member access *)
                | "(" , [ args ] , ")"                    (* call *)
                | "<" , type_args , ">" , "(" , [ args ] , ")"  (* generic call *)
                | "[" , expr , "]"                        (* subscript *)
                | "++"
                | "--" ;
args            = expr , { "," , expr } ;


(* ---- Primary expressions ------------------------------------- *)

primary         = INT_LIT
                | FLOAT_LIT
                | STRING_LIT
                | interp_string
                | BOOL_LIT
                | IDENT
                | "this"
                | paren_or_cast
                | array_literal
                | map_literal
                | special_call ;

paren_or_cast   = "(" , type , ")" , unary      (* cast *)
                | "(" , expr , ")" ;             (* parenthesized group *)

array_literal   = "[" , [ expr , { "," , expr } ] , "]" ;
map_literal     = "{" , [ expr , ":" , expr ,
                          { "," , expr , ":" , expr } ] , "}" ;

special_call    = "unsafeCast" , "<" , type , ">" , "(" , expr , ")"
                | "unsafeOverride" , "(" , expr , ")"
                | "defuzzy" , "(" , expr , ")"
                | "embed" , "(" , expr , ")" ;

(* Interpolated strings are produced by the lexer as a token
   stream with STRING_INTERP_START / STRING_LIT_CHUNK /
   INTERP_OPEN / INTERP_CLOSE / STRING_INTERP_END markers so the
   parser can walk into interpolation holes with the full
   expression grammar. *)

interp_string   = STRING_INTERP_START ,
                  { STRING_LIT_CHUNK
                  | INTERP_OPEN , expr , INTERP_CLOSE } ,
                  STRING_INTERP_END ;


(* ---- Operator set ------------------------------------------- *)

OVERLOADABLE_OP = "+" | "-" | "*" | "/" | "%"
                | "==" | "!=" | "<" | ">" | "<=" | ">="
                | "!" ;


(* ============================================================ *)
(* Lexical grammar                                               *)
(* ============================================================ *)
(*                                                                *)
(* The reference lexer is at                                      *)
(* sdk/sutra-compiler/sutra_compiler/lexer.py. Whitespace and    *)
(* comments are consumed between syntactic tokens and do not     *)
(* appear in the syntactic grammar above.                        *)
(* ============================================================ *)

letter          = "a" | ... | "z" | "A" | ... | "Z" ;
digit           = "0" | ... | "9" ;
any_char        = ? any Unicode scalar value ? ;
newline         = "\n" ;


(* ---- Whitespace and comments -------------------------------- *)

whitespace      = " " | "\t" | "\r" | "\n" ;

line_comment    = ( "//" | "#" | "///" ) ,
                  { any_char - newline } ,
                  newline ;

block_comment   = "/*" , { any_char } , "*/" ;   (* not nested *)


(* ---- Identifiers and keywords -------------------------------- *)

IDENT           = ( letter | "_" ) , { letter | digit | "_" } ;

KEYWORD         = "function" | "method"
                | "static"   | "public"  | "private"
                | "var"      | "const"   | "return"
                | "if"       | "else"
                | "while"    | "for"     | "foreach" | "in"
                | "do"       | "loop"    | "as"
                | "try"      | "catch"
                | "this"     | "operator" | "new"    | "implicit"
                | "true"     | "false" ;

(* Contextual keywords: parsed as special forms only in call
   position; legal as ordinary identifiers elsewhere. *)
CONTEXTUAL_KW   = "defuzzy" | "embed"
                | "unsafeCast" | "unsafeOverride" ;


(* ---- Literals ----------------------------------------------- *)

INT_LIT         = digit , { digit } ;

FLOAT_LIT       = digit , { digit } , "." , digit , { digit } ;
(* v0.0.0: no hex, no exponent, no underscores in numeric literals. *)

BOOL_LIT        = "true" | "false" ;

STRING_LIT      = '"' , { string_char | escape } , '"' ;
string_char     = any_char - ( '"' | "\\" | newline ) ;
escape          = "\\" , ( "n" | "t" | "r" | "\\" | '"' | "'"
                         | "0" | "{" | "}" | "$" ) ;


(* ---- Operators and punctuation ------------------------------ *)

SINGLE_OP       = "{" | "}" | "(" | ")" | "[" | "]"
                | ";" | "," | "." | ":"
                | "+" | "-" | "*" | "/" | "%"
                | "!" | "?" | "=" | "<" | ">"
                | "&" | "|" | "^" ;

DOUBLE_OP       = "==" | "!=" | "<=" | ">="
                | "&&" | "||"
                | "++" | "--"
                | "+=" | "-=" | "*=" | "/="
                | "->" | "=>" | "::" ;

(* `|>` is lexed as PIPE_FORWARD so the validator can reject it
   with a clear diagnostic (SUT0110). It is never legal syntax in
   a compiling v0.0.0 program. *)
FORBIDDEN_OP    = "|>" ;


(* ---- String interpolation token stream ---------------------- *)
(* Interpolated strings `$" ... { expr } ... "` are delivered to
   the parser as a sequence of these tokens rather than a single
   literal. Brace nesting inside the `{ expr }` hole is counted;
   only the matching closing `}` ends the hole. *)

STRING_INTERP_START  = '$"' ;
STRING_INTERP_END    = '"' ;      (* in interp-body context only *)
STRING_LIT_CHUNK     = { string_char | escape } ;  (* inside interp body *)
INTERP_OPEN          = "{" ;      (* in interp-body context *)
INTERP_CLOSE         = "}" ;      (* closes matching INTERP_OPEN *)


(* ============================================================ *)
(* Parser ambiguities (documented, resolved with lookahead)      *)
(* ============================================================ *)
(*                                                                *)
(* 1. `(Type) expr` (cast) vs `(expr)` (group). The parser tries *)
(*    to speculatively parse a bare type followed by `)`, and    *)
(*    commits to a cast only if the next token can start a       *)
(*    unary expression and is not itself `(`.                    *)
(*                                                                *)
(* 2. `Ident < ... > ( ... )` (generic call) vs `a < b`          *)
(*    (less-than). In postfix position, `<` opens type           *)
(*    arguments only if the sub-stream lexes as a balanced       *)
(*    `< type_args >` followed immediately by `(`.               *)
(*                                                                *)
(* 3. `loop ( INT_LIT [as IDENT] )` (bounded, unrolled at        *)
(*    compile time) vs `loop ( expr )` (eigenrotation). The      *)
(*    parser reads an expression and only takes the bounded      *)
(*    branch if the result is an INT_LIT.                         *)
(* ============================================================ *)
