sdk/sutra-compiler/sutra_compiler/parser.py
"""Recursive-descent parser for the Sutra language.

The parser consumes a token stream produced by `Lexer` and builds the
AST nodes from `ast_nodes`. It does NOT throw on parse errors — it
records a diagnostic, tries a recovery strategy (usually "skip to the
next `;` or `}`"), and keeps going, so a single bad token doesn't hide
the rest of the file from the validator.

Grammar covered (v0.1):

    module          = { top_level_item }
    top_level_item  = function_decl | method_decl | var_decl | statement

    function_decl   = modifiers? "function" modifiers? type ident
                      ("<" type_params ">")? "(" params? ")" block
                    | modifiers? "function" modifiers? "operator" op_token
                      "(" params? ")" block
    method_decl     = modifiers? "method" type ident
                      ("<" type_params ">")? "(" params? ")" block
    modifiers       = ("public" | "private" | "static")+

    type            = ident ("<" type_args ">")?
    params          = param ("," param)*
    param           = type ident

    block           = "{" { statement } "}"
    statement       = if_stmt | while_stmt | for_stmt | foreach_stmt
                    | do_while_stmt | try_stmt | return_stmt
                    | var_decl | block | expr_stmt

    var_decl        = ("var" | "const") ident ["=" expr] ";"
                    | "const" type ident ["=" expr] ";"
                    | type ident ["=" expr] ";"

    if_stmt         = "if" "(" expr ")" block [ "else" (if_stmt | block) ]
    while_stmt      = "while" "(" expr ")" block
    for_stmt        = "for" "(" [for_init] ";" [expr] ";" [expr] ")" block
    for_init        = var_decl_no_semi | expr
    foreach_stmt    = "foreach" "(" ("var" | type) ident "in" expr ")" block
    do_while_stmt   = "do" block "while" "(" expr ")" ";"
    try_stmt        = "try" block "catch" block
    return_stmt     = "return" [expr] ";"
    expr_stmt       = expr ";"

    expr            = assignment
    assignment      = logical_or (assign_op assignment)?
    logical_or      = logical_and ("||" logical_and)*
    logical_and     = equality ("&&" equality)*
    equality        = comparison (("==" | "!=") comparison)*
    comparison      = additive (("<" | ">" | "<=" | ">=") additive)*
    additive        = multiplicative (("+" | "-") multiplicative)*
    multiplicative  = unary (("*" | "/" | "%") unary)*
    unary           = ("!" | "-" | "+") unary | postfix
    postfix         = primary { call_or_member }
    call_or_member  = "." ident | "(" args? ")" | "<" type_args ">" "(" args?")"
    primary         = literal | interp_string | ident | "this"
                    | paren_or_cast | special_call

    paren_or_cast   = "(" ( type ")" unary  |  expr ")" )
    special_call    = "unsafeCast" "<" type ">" "(" expr ")"
                    | "unsafeOverride" "(" expr ")"
                    | "defuzzy" "(" expr ")"
                    | "embed" "(" expr ")"

Ambiguities handled:

- `(Type) expr` (cast) vs `(expr)` (group): we save the position, try
  to parse a bare type followed by `)`, and if the next token can
  start a unary expression, commit to cast; otherwise rewind.
- `Ident < ... > (...)` (generic call) vs `a < b` (comparison): in
  postfix position we look ahead for a balanced `<...>` followed by
  `(`. If the pattern matches, it's a generic call.
"""

from __future__ import annotations

from typing import List, Optional, Tuple, Union

from . import ast_nodes as ast
from .diagnostics import (
    DiagnosticBag,
    SourcePosition,
    SourceSpan,
)
from .lexer import Token, TokenKind


# Tokens that can start a unary/primary expression. Used by the cast
# disambiguation to decide whether `(X)` is a cast or a group.
_EXPR_START_TOKENS = {
    TokenKind.INT_LIT,
    TokenKind.FLOAT_LIT,
    TokenKind.IMAG_LIT,
    TokenKind.CHAR_LIT,
    TokenKind.STRING_LIT,
    TokenKind.STRING_INTERP_START,
    TokenKind.TRUE,
    TokenKind.FALSE,
    TokenKind.KW_UNKNOWN,
    TokenKind.KW_WAIT,
    TokenKind.IDENT,
    TokenKind.KW_THIS,
    TokenKind.LPAREN,
    TokenKind.LBRACKET,
    TokenKind.BANG,
    TokenKind.MINUS,
    TokenKind.PLUS,
}

# Primitive type names. The parser treats these like any other type
# identifier but keeps the set around for nicer error messages.
_PRIMITIVE_TYPES = {
    # `number` canonical; `scalar` deprecated alias (see lexer.py
    # PRIMITIVE_TYPE_NAMES — kept for the frozen NeurIPS archive).
    "number",
    "scalar", "vector", "matrix", "tuple", "string",
    "bool", "fuzzy", "void", "permutation", "map",
    "char", "int",
    # trit = three-valued fuzzy (three-way polarizer in defuzz).
    "trit",
    # complex — real/imag pair on synthetic axes 0, 1.
    "complex",
}

# Keywords that can act as a "special function" in expression position.
_SPECIAL_CALL_NAMES = {"unsafeCast", "unsafeOverride", "defuzzy", "embed"}


def _body_contains_recur(node) -> bool:
    """Return True if `node` or any of its children contains a `RecurStmt`.

    Used to set `FunctionDecl.is_non_halting` per
    planning/sutra-spec/non-halting-loop.md (presence of `recur(...)` in
    the body marks the function as non-halting). Walks the AST without
    recursing into nested FunctionDecls (a nested function with its own
    `recur` is its own non-halting unit, not the outer's).
    """
    if isinstance(node, ast.RecurStmt):
        return True
    if isinstance(node, ast.FunctionDecl):
        # Don't recurse into nested function bodies.
        return False
    if isinstance(node, list):
        return any(_body_contains_recur(x) for x in node)
    if hasattr(node, "__dataclass_fields__"):
        for fld in node.__dataclass_fields__:
            if _body_contains_recur(getattr(node, fld)):
                return True
    return False


class Parser:
    def __init__(
        self,
        tokens: List[Token],
        *,
        file: Optional[str] = None,
        diagnostics: Optional[DiagnosticBag] = None,
    ) -> None:
        self.tokens = tokens
        self.file = file
        self.diagnostics = diagnostics if diagnostics is not None else DiagnosticBag(file=file)
        self._pos = 0

    # ================================================================
    # Public entry points
    # ================================================================

    def parse_module(self) -> ast.Module:
        start = self._current_span()
        items: List[ast.TopLevel] = []
        while not self._at_end():
            item = self._parse_top_level()
            if item is not None:
                items.append(item)
        end = self._current_span()
        module_span = SourceSpan(start=start.start, end=end.end)
        return ast.Module(items=items, span=module_span)

    # ================================================================
    # Token stream helpers
    # ================================================================

    def _at_end(self) -> bool:
        return self._peek().kind is TokenKind.EOF

    def _peek(self, offset: int = 0) -> Token:
        idx = self._pos + offset
        if idx >= len(self.tokens):
            return self.tokens[-1]
        return self.tokens[idx]

    def _current_span(self) -> SourceSpan:
        return self._peek().span

    def _advance(self) -> Token:
        tok = self.tokens[self._pos]
        if tok.kind is not TokenKind.EOF:
            self._pos += 1
        return tok

    def _check(self, kind: TokenKind) -> bool:
        return self._peek().kind is kind

    def _check_any(self, *kinds: TokenKind) -> bool:
        return self._peek().kind in kinds

    def _match(self, *kinds: TokenKind) -> Optional[Token]:
        if self._peek().kind in kinds:
            return self._advance()
        return None

    def _expect(self, kind: TokenKind, what: str) -> Optional[Token]:
        if self._check(kind):
            return self._advance()
        tok = self._peek()
        self.diagnostics.error(
            f"expected {what}, got {self._describe(tok)}",
            tok.span,
            code="SUT0100",
        )
        return None

    def _describe(self, tok: Token) -> str:
        if tok.kind is TokenKind.EOF:
            return "end of file"
        return f"`{tok.lexeme}`"

    def _synchronize_to(self, *kinds: TokenKind) -> None:
        """Skip tokens until we hit one of `kinds` (inclusive of those
        kinds) or EOF. Used for error recovery after a parse failure.
        """
        while not self._at_end() and self._peek().kind not in kinds:
            self._advance()

    def _skip_to_statement_boundary(self) -> None:
        # Skip to the next `;` or `}` and consume the `;` if present.
        depth = 0
        while not self._at_end():
            kind = self._peek().kind
            if kind is TokenKind.LBRACE or kind is TokenKind.LPAREN:
                depth += 1
            elif kind is TokenKind.RBRACE or kind is TokenKind.RPAREN:
                if depth == 0:
                    return
                depth -= 1
            elif kind is TokenKind.SEMICOLON and depth == 0:
                self._advance()
                return
            self._advance()

    # ================================================================
    # Top-level
    # ================================================================

    def _parse_top_level(self) -> Optional[ast.TopLevel]:
        # Peek modifiers + keyword to decide which production to take.
        save = self._pos
        mods = self._parse_modifiers()
        tok = self._peek()

        if tok.kind is TokenKind.KW_FUNCTION:
            return self._parse_function_decl(mods)
        if tok.kind is TokenKind.KW_ASYNC and self._peek(1).kind is TokenKind.KW_FUNCTION:
            # `async function ...` — promise-producing function.
            # Consume the `async` modifier; _parse_function_decl picks
            # up at `function`. See planning/sutra-spec/promises.md.
            self._advance()
            return self._parse_function_decl(mods, is_async=True)
        if tok.kind in (TokenKind.KW_DO_WHILE,
                        TokenKind.KW_WHILE_LOOP,
                        TokenKind.KW_ITERATIVE_LOOP,
                        TokenKind.KW_FOREACH_LOOP):
            if mods.is_public or mods.is_private or mods.is_static:
                self.diagnostics.error(
                    "modifiers (`public`/`private`/`static`) are not yet "
                    "supported on loop function declarations",
                    tok.span,
                    code="SUT0101",
                )
            return self._parse_loop_function_decl()
        if tok.kind is TokenKind.KW_INTRINSIC and self._peek(1).kind is TokenKind.KW_FUNCTION:
            # `intrinsic function <ret> <name>(<params>);` — signature
            # only, body lives in the runtime. Used by stdlib files for
            # leaf primitives.
            self._advance()  # consume `intrinsic`
            return self._parse_function_decl(mods, is_intrinsic=True)
        if tok.kind is TokenKind.KW_METHOD:
            return self._parse_method_decl(mods)
        if tok.kind is TokenKind.KW_STATIC and self._peek(1).kind is TokenKind.KW_METHOD:
            mods.is_static = True
            return self._parse_method_decl(mods)
        if tok.kind is TokenKind.KW_CLASS:
            # Modifiers don't apply to class declarations in the MVP
            # surface — surface them as an error if any were saved.
            if mods.is_public or mods.is_private or mods.is_static:
                self.diagnostics.error(
                    "modifiers (`public`/`private`/`static`) are not yet "
                    "supported on class declarations",
                    tok.span,
                    code="SUT0101",
                )
            return self._parse_class_decl()
        if tok.kind is TokenKind.KW_SLOT:
            # `slot TYPE name = expr;` — only legal at function scope
            # in the MVP, but the parser doesn't enforce that today.
            # Modifiers aren't supported on slot decls.
            if mods.is_public or mods.is_private or mods.is_static:
                self.diagnostics.error(
                    "modifiers (`public`/`private`/`static`) are not "
                    "supported on slot declarations",
                    tok.span,
                    code="SUT0101",
                )
            return self._parse_slot_decl()

        # No function/method. Modifiers only make sense on those, so if
        # we saw any, that's an error; rewind and try as a statement.
        if mods.is_public or mods.is_private or mods.is_static:
            self.diagnostics.error(
                "modifiers (`public`/`private`/`static`) only apply to function and method declarations",
                tok.span,
                code="SUT0101",
            )
            self._pos = save  # rewind so the next pass sees the same tokens

        stmt = self._parse_statement()
        return stmt

    def _parse_modifiers(self) -> ast.Modifiers:
        mods = ast.Modifiers()
        while True:
            tok = self._peek()
            if tok.kind is TokenKind.KW_PUBLIC:
                mods.is_public = True
                self._advance()
            elif tok.kind is TokenKind.KW_PRIVATE:
                mods.is_private = True
                self._advance()
            elif tok.kind is TokenKind.KW_STATIC:
                # `static` can appear before `method`. Only consume here
                # if what follows is `function` — `method` handles its
                # own `static` check via _parse_top_level.
                if self._peek(1).kind is TokenKind.KW_FUNCTION:
                    mods.is_static = True
                    self._advance()
                else:
                    break
            else:
                break
        return mods

    # ----------------------------------------------------------------
    # Function / method declarations
    # ----------------------------------------------------------------

    def _parse_function_decl(
        self, mods: ast.Modifiers, *, is_intrinsic: bool = False,
        is_async: bool = False,
    ) -> Optional[ast.FunctionDecl]:
        start_span = self._current_span()
        self._expect(TokenKind.KW_FUNCTION, "`function`")

        # More modifiers may legally appear after `function` in the
        # full internal form: `function public static vector Foo(...)`.
        inner_mods = self._parse_modifiers()
        if inner_mods.is_public:
            mods.is_public = True
        if inner_mods.is_private:
            mods.is_private = True
        if inner_mods.is_static:
            mods.is_static = True

        # Operator overload? `function operator + (...)`
        if self._check(TokenKind.KW_OPERATOR):
            return self._parse_operator_decl(mods, start_span, is_method=False)

        return_type = self._parse_type()
        if return_type is None:
            self._skip_to_statement_boundary()
            return None

        name_tok = self._expect(TokenKind.IDENT, "function name")
        if name_tok is None:
            self._skip_to_statement_boundary()
            return None

        type_params = self._parse_type_params()
        params = self._parse_param_list()
        if is_intrinsic:
            # Signature only; semicolon in place of body. Fabricate an
            # empty Block so downstream code that assumes .body is a
            # Block doesn't need a special-case.
            semi = self._expect(TokenKind.SEMICOLON, "`;` to close intrinsic declaration")
            end = semi.span.end if semi is not None else self._current_span().end
            body = ast.Block(statements=[], span=SourceSpan(start=end, end=end))
            return ast.FunctionDecl(
                modifiers=mods,
                return_type=return_type,
                name=name_tok.lexeme,
                type_params=type_params,
                params=params,
                body=body,
                is_operator=False,
                is_intrinsic=True,
                is_async=is_async,
                span=SourceSpan(start=start_span.start, end=end),
            )
        body = self._parse_block()
        if body is None:
            return None

        end_span = body.span
        is_non_halting = _body_contains_recur(body)
        return ast.FunctionDecl(
            modifiers=mods,
            return_type=return_type,
            name=name_tok.lexeme,
            type_params=type_params,
            params=params,
            body=body,
            is_operator=False,
            is_async=is_async,
            is_non_halting=is_non_halting,
            span=SourceSpan(start=start_span.start, end=end_span.end),
        )


    _LOOP_KIND_TOKEN = {
        TokenKind.KW_DO_WHILE: "do_while",
        TokenKind.KW_WHILE_LOOP: "while_loop",
        TokenKind.KW_ITERATIVE_LOOP: "iterative_loop",
        TokenKind.KW_FOREACH_LOOP: "foreach_loop",
    }

    def _parse_loop_function_decl(self) -> Optional[ast.LoopFunctionDecl]:
        """Parse `<kind> name(condition, type name (= default)?, ...) { body }`.

        The first item in the paren-list is an expression (the condition for
        while/do_while; the count for iterative; the array for foreach).
        Remaining items are state-parameter declarations with optional
        defaults. State params can be referenced by the condition expression.
        """
        start_span = self._current_span()
        kind_tok = self._advance()
        kind = self._LOOP_KIND_TOKEN[kind_tok.kind]

        name_tok = self._expect(TokenKind.IDENT, f"loop function name after `{kind}`")
        if name_tok is None:
            self._skip_to_statement_boundary()
            return None

        if self._expect(TokenKind.LPAREN, "`(` after loop function name") is None:
            self._skip_to_statement_boundary()
            return None

        # First item: the condition expression.
        condition = self._parse_expr()
        if condition is None:
            self._skip_to_statement_boundary()
            return None

        # Remaining items: state parameters (TYPE name (= default)?).
        state_params: List[ast.LoopStateParam] = []
        while self._match(TokenKind.COMMA):
            param_start = self._current_span()
            type_ref = self._parse_type()
            if type_ref is None:
                self._skip_to_statement_boundary()
                return None
            param_name_tok = self._expect(TokenKind.IDENT, "state parameter name")
            if param_name_tok is None:
                self._skip_to_statement_boundary()
                return None
            default_expr: Optional[ast.Expr] = None
            if self._match(TokenKind.ASSIGN):
                default_expr = self._parse_expr()
                if default_expr is None:
                    self._skip_to_statement_boundary()
                    return None
            param_end = self._current_span().end
            state_params.append(
                ast.LoopStateParam(
                    type_ref=type_ref,
                    name=param_name_tok.lexeme,
                    default=default_expr,
                    span=SourceSpan(start=param_start.start, end=param_end),
                )
            )

        if self._expect(TokenKind.RPAREN, "`)` to close loop parameter list") is None:
            self._skip_to_statement_boundary()
            return None

        body = self._parse_block()
        if body is None:
            return None

        end_span = body.span
        return ast.LoopFunctionDecl(
            kind=kind,
            name=name_tok.lexeme,
            condition=condition,
            state_params=state_params,
            body=body,
            span=SourceSpan(start=start_span.start, end=end_span.end),
        )

    def _parse_method_decl(
        self, mods: ast.Modifiers, *, is_intrinsic: bool = False
    ) -> Optional[ast.MethodDecl]:
        start_span = self._current_span()
        # Consume `static` if we got here via static-method detection.
        self._match(TokenKind.KW_STATIC)
        # Consume `intrinsic` if it precedes `method` (handled by the
        # caller normally, but tolerate it here for top-level entry).
        if self._check(TokenKind.KW_INTRINSIC):
            self._advance()
            is_intrinsic = True
        self._expect(TokenKind.KW_METHOD, "`method`")

        if self._check(TokenKind.KW_OPERATOR):
            if is_intrinsic:
                self.diagnostics.error(
                    "operator methods cannot be declared `intrinsic`",
                    self._current_span(),
                    code="SUT0145",
                )
            fn = self._parse_operator_decl(mods, start_span, is_method=True)
            if fn is None:
                return None
            return ast.MethodDecl(
                modifiers=mods,
                return_type=fn.return_type,
                name=fn.name,
                type_params=fn.type_params,
                params=fn.params,
                body=fn.body,
                is_operator=True,
                span=fn.span,
            )

        return_type = self._parse_type()
        if return_type is None:
            self._skip_to_statement_boundary()
            return None

        name_tok = self._expect(TokenKind.IDENT, "method name")
        if name_tok is None:
            self._skip_to_statement_boundary()
            return None

        type_params = self._parse_type_params()
        params = self._parse_param_list()
        if is_intrinsic:
            # Signature-only declaration; semicolon in place of body.
            semi = self._expect(TokenKind.SEMICOLON,
                                "`;` to close intrinsic method declaration")
            end = semi.span.end if semi is not None else self._current_span().end
            body = ast.Block(statements=[], span=SourceSpan(start=end, end=end))
            return ast.MethodDecl(
                modifiers=mods,
                return_type=return_type,
                name=name_tok.lexeme,
                type_params=type_params,
                params=params,
                body=body,
                is_operator=False,
                is_intrinsic=True,
                span=SourceSpan(start=start_span.start, end=end),
            )

        body = self._parse_block()
        if body is None:
            return None

        end_span = body.span
        return ast.MethodDecl(
            modifiers=mods,
            return_type=return_type,
            name=name_tok.lexeme,
            type_params=type_params,
            params=params,
            body=body,
            is_operator=False,
            span=SourceSpan(start=start_span.start, end=end_span.end),
        )

    def _parse_class_decl(self) -> Optional[ast.ClassDecl]:
        """Parse `class Name extends Parent { ... }`.

        MVP scope: empty body required, single `extends` parent
        required (no implicit object root yet), no modifiers, no
        type parameters, no member declarations inside the braces.
        Any non-empty body is an error directing the user to file
        an issue / wait for the ontology work to land.
        """
        start_span = self._current_span()
        self._expect(TokenKind.KW_CLASS, "`class`")

        name_tok = self._expect(TokenKind.IDENT, "class name")
        if name_tok is None:
            self._skip_to_statement_boundary()
            return None

        # `extends Parent` — required in MVP. We could default to
        # `vector` if omitted, but making it explicit is closer to
        # how the user described the design ("inherits from vector").
        extends_tok = self._expect(TokenKind.KW_EXTENDS,
                                   "`extends ParentName` (required in MVP)")
        if extends_tok is None:
            self._skip_to_statement_boundary()
            return None
        parent_tok = self._expect(TokenKind.IDENT, "parent class name")
        if parent_tok is None:
            self._skip_to_statement_boundary()
            return None
